Made the Login Register for the Android App Integrated with Backend (No Design)

--- a/Frontend_app/app/src/main/res/layout/activity_landing.xml
+++ b/Frontend_app/app/src/main/res/layout/activity_landing.xml
@@ -1,6 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:background="@color/white">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/welcomeMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome to the Lost and Found System!"
+        android:textSize="22sp"
+        android:textColor="@color/maroon"
+        android:textStyle="bold"
+        android:layout_marginBottom="20dp"/>
+
+    <TextView
+        android:id="@+id/signedInTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Signed in as: "
+        android:textSize="18sp"
+        android:textColor="@color/gold"
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"/>
+
+    <TextView
+        android:id="@+id/tokenTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Token: "
+        android:textSize="16sp"
+        android:textColor="@color/gold"
+        android:layout_marginBottom="10dp"/>
+
+    <Button
+        android:id="@+id/showTokenButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show Token"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/maroon"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"/>
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/maroon"
+        android:padding="10dp"/>
+</LinearLayout>
