--- a/Frontend_app/app/src/main/res/values/colors.xml
+++ b/Frontend_app/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="maroon">#800000</color>
     <color name="gold">#FFD700</color>
     <color name="white">#FFFFFF</color>
+    <color name="yellow">#FFC107</color>
+    <color name="black">#000000</color>
+    <color name="dark_gray">#666666</color>
 </resources>
