--- a/Frontend_app/app/src/main/res/values/styles.xml
+++ b/Frontend_app/app/src/main/res/values/styles.xml
@@ -26,4 +26,8 @@
     <style name="MaroonHintTextAppearance" parent="TextAppearance.AppCompat.Small">
         <item name="android:textColor">@color/maroon</item>
     </style>
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
 </resources>
